--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@truffle/hdwallet-provider": "^2.1.11",
+    "dotenv": "^16.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "truffle-plugin-verify": "^0.6.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.6.0"
   },
